<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_personal_card"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/portal_personal_card" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_grades"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/portal_grades" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_scholarship"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/portal_scholarship" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_payment"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/portal_payment" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_my_payments"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/portal_my_payments" />

        </LinearLayout>

        <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/progressBarStyleLarge"
            android:indeterminate="true"
            android:indeterminateTintMode="src_atop"
            android:indeterminateTint="@color/colorPrimary"
            android:layout_centerInParent="true"
            android:visibility="gone" />

    </RelativeLayout>
</androidx.core.widget.NestedScrollView>