<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/register_layout_margin"
            android:paddingTop="@dimen/register_layout_margin"
            android:paddingRight="@dimen/register_layout_margin"
            android:focusableInTouchMode="true">

            <!-- Email Label -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_input_margin"
                android:layout_marginBottom="@dimen/text_input_margin"
                android:hint="@string/email_reg">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    app:errorEnabled="true"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Password Label -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_input_margin"
                android:layout_marginBottom="@dimen/text_input_margin"
                android:hint="@string/password_reg">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    app:errorEnabled="true"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_input_margin"
                android:layout_marginBottom="@dimen/text_input_margin"
                android:hint="@string/last_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_lastname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--  Name Label -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_input_margin"
                android:layout_marginBottom="@dimen/text_input_margin"
                android:hint="@string/first_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_firstname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:inputType="textCapWords" />
            </com.google.android.material.textfield.TextInputLayout>

            <!--  Name Label -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_input_margin"
                android:layout_marginBottom="@dimen/text_input_margin"
                android:hint="@string/middle_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_middlename"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_input_margin"
                android:layout_marginBottom="@dimen/text_input_margin"
                android:text="@string/gender"
                style="@style/text_view_18" />

            <RadioGroup
                android:id="@+id/input_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/gender_male"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:text="@string/gender_male"
                    style="@style/text_view_18" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/gender_female"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:text="@string/gender_female"
                    style="@style/text_view_18" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/gender_none"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:text="@string/gender_none"
                    style="@style/text_view_18" />

            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_input_margin"
                android:layout_marginBottom="@dimen/text_input_margin"
                android:text="@string/choose_language"
                style="@style/text_view_18"/>

            <Spinner
                android:id="@+id/input_language_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_input_margin"
                android:layout_marginBottom="@dimen/text_input_margin"
                android:entries="@array/languages_array"
                android:textSize="18sp"
                style="@android:style/Widget.Material.Spinner.Underlined"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_input_margin"
                android:layout_marginBottom="@dimen/text_input_margin"
                android:hint="@string/phone_number">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    app:errorEnabled="true"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/checkbox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/text_input_margin"
                android:layout_marginBottom="@dimen/text_input_margin"
                android:text="@string/checkbox"
                style="@style/text_view_18"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_register"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_input_margin"
                android:layout_marginBottom="16dp"
                android:text="@string/register" />

        </LinearLayout>

        <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/progressBarStyleLarge"
            android:indeterminate="true"
            android:indeterminateTintMode="src_atop"
            android:indeterminateTint="@color/colorPrimary"
            android:layout_centerInParent="true"
            android:visibility="gone"/>

    </RelativeLayout>


</ScrollView>