<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingTop="56dp"
            android:paddingRight="24dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="126dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="24dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_tpu_logo_aya_caption" />

            <!-- Email Label -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_input_margin"
                android:layout_marginBottom="@dimen/text_input_margin"
                android:hint="@string/email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Password Label -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_input_margin"
                android:layout_marginBottom="@dimen/text_input_margin"
                android:hint="@string/password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/reset_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/forgot_password"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold" />

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/remember_me_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/remember_me"
                    android:textSize="@dimen/text_size" />
            </RelativeLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:padding="12dp"
                android:text="@string/login" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:gravity="center"
                android:text="@string/login_via_service"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp">

                <ImageView
                    android:id="@+id/button_login_google"
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:clickable="true"
                    android:cropToPadding="true"
                    android:focusable="true"
                    android:src="@drawable/ic_google_icon" />

                <ImageView
                    android:id="@+id/button_login_facebook"
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:clickable="true"
                    android:cropToPadding="true"
                    android:focusable="true"
                    android:src="@drawable/ic_facebook" />

                <ImageView
                    android:id="@+id/button_login_vk"
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:clickable="true"
                    android:cropToPadding="true"
                    android:focusable="true"
                    android:src="@drawable/ic_vk" />
            </LinearLayout>
        </LinearLayout>

        <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminate="true"
            android:indeterminateTint="@color/colorPrimary"
            android:indeterminateTintMode="src_atop"
            android:visibility="gone" />
    </RelativeLayout>
</ScrollView>


